--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>RADIANCE - HOME</title>
+    <link rel="shortcut icon" href="images/logo1.jpeg" type="image/icon type">
     <script src="js/uigod.js"></script>
     <style>
 
